logs/pylt.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylt'...
Listing './lib/python3.5/site-packages/pylt/_handlers'...
Listing './lib/python3.5/site-packages/pylt/_syntax'...
Listing './lib/python3.5/site-packages/pylt/_transforms'...
Listing './lib/python3.5/site-packages/pylt/simple'...
Listing './lib/python3.5/site-packages/pylt/simple/_test_transforms'...
Compiling './lib/python3.5/site-packages/pylt/simple/_test_transforms/given1.py'...
***   File "./lib/python3.5/site-packages/pylt/simple/_test_transforms/given1.py", line 5
    a = b[f(a)] = x given:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylt/simple/_test_transforms/given2.py'...
***   File "./lib/python3.5/site-packages/pylt/simple/_test_transforms/given2.py", line 3
    y = y given:
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pylt/tests'...
Listing './lib/python3.5/site-packages/pylt-0.1.0a1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
